--- a/Gastenboek.html
+++ b/Gastenboek.html
@@ -71,6 +71,9 @@
         <p>
             <button type="submit">Verzend</button>
         </p>
+         <nav class="css-border"><a href="index.html">Homepage</a>
+            <link rel="stylesheet" type="text/css" href="styles.css"><br><br>
+        </nav>
     </form>
 </body>
 
